--- a/langue/dreamstone-all.html
+++ b/langue/dreamstone-all.html
@@ -42,7 +42,7 @@
 </p>
 <p class="souligne">
 <br />
-<a href="../dreamstone-projet.html" class="blanc">francais </a>
+<a href="../index.html" class="blanc">francais </a>
 <a href="dreamstone-ang.html" class="blanc">english </a>
 <a href="dreamstone-esp.html" class="blanc">espa&#241;ol </a>
 deutsch 
