--- a/langue/dreamstone-ang.html
+++ b/langue/dreamstone-ang.html
@@ -44,7 +44,7 @@
 </p>
 <p class="souligne">
 <br />
-<a href="../dreamstone-projet.html" class="blanc">francais </a>
+<a href="../index.html" class="blanc">francais </a>
 english 
 <a href="dreamstone-esp.html" class="blanc">espa&#241;ol </a>
 <a href="dreamstone-all.html" class="blanc">deutsch </a>
