--- a/langue/dreamstone-esp.html
+++ b/langue/dreamstone-esp.html
@@ -44,7 +44,7 @@
 </p>
 <p class="souligne">
 <br />
-<a href="../dreamstone-projet.html" class="blanc">francais </a>
+<a href="../index.html" class="blanc">francais </a>
 <a href="dreamstone-ang.html" class="blanc">english </a>
 espa&#241;ol 
 <a href="dreamstone-all.html" class="blanc">deutsch </a>
